--- a/mitrabajo.html
+++ b/mitrabajo.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
-<body>
 <h1>MarkosJB9</h1>
+<style>
+div {height:50px;padding:16px;width:100%;}
+</style>
+<body>
+
+<h1>Colors can be set using color names</h1>
+
+<div style="background-color:red">
+<h1 style="color:white">Heading</h1>
+</div>
+
+<div style="background-color:yellow">
+<h1 style="color:blue">Heading</h1>
+</div>
+
+<div style="background-color:blue">
+<h1 style="color:yellow">Heading</h1>
+</div>
+
 </body>
 </html>
